chore: Update package.json to specify minimum browser versions

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "examin",
   "version": "0.1.0",
   "private": false,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -35,7 +36,7 @@
       "edge >= 79",
       "firefox >= 68",
       "opera >= 54",
-      "safari >= 14" 
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
